# Minesweeper

./: .clang-format  CMakeLists.txt  GameBoard.cpp  GameBoard.h  GameCell.cpp  GameCell.h  Gameboard.cpp  Gameboard.h  Gamecell.cpp  Gamecell.h  MainWindow.cpp  MainWindow.h  Minesweeper.cpp  Minesweeper.h  Minesweeper.pro  NewGameDialog.cpp  NewGameDialog.h  main.cpp  resources.qrc  tmp
translations/: minesweeper_en.qm  minesweeper_en.ts  minesweeper_ru.qm  minesweeper_ru.ts
